@@ -74,6 +74,7 @@ https://github.com/elastic/beats/compare/v6.4.0...master[Check the HEAD diff]
   internal monitoring data. {issue}7807[7807]
 - Allow for cloud-id to specify a custom port. This makes cloud-id work in ECE contexts. {pull}7887[7887]
 - Add support to grow or shrink an existing spool file between restarts. {pull}7859[7859]
+- Add debug check to logp.Logger {pull}7965[7965]
 - Make kubernetes autodiscover ignore events with empty container IDs {pull}7971[7971]
 
 *Auditbeat*
